evaluator/sources/824952155.error
/eval-folder/824952155.cpp: In function 'int main()':
/eval-folder/824952155.cpp:6:1: error: expected ';' before '}' token
 }
 ^
